--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\gjcol\\Anaconda3\\envs\\InstrumentRec-GPU\\python.exe"
+    "python.pythonPath": "C:\\Users\\gjcol\\Anaconda3\\envs\\IR_GPU_plot\\python.exe"
 }
