implimenting better testing procedures

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,159 @@
 
 NSynth_reader.ipynb
 .vscode/settings.json
+Keras/OpenMic_1of4/openmic_000.npz
+Keras/OpenMic_4of4/openmic_149.npz
+Keras/OpenMic_1of4/openmic_001.npz
+Keras/OpenMic_1of4/openmic_002.npz
+Keras/OpenMic_1of4/openmic_003.npz
+Keras/OpenMic_1of4/openmic_004.npz
+Keras/OpenMic_1of4/openmic_005.npz
+Keras/OpenMic_1of4/openmic_006.npz
+Keras/OpenMic_1of4/openmic_007.npz
+Keras/OpenMic_1of4/openmic_008.npz
+Keras/OpenMic_1of4/openmic_009.npz
+Keras/OpenMic_1of4/openmic_010.npz
+Keras/OpenMic_1of4/openmic_011.npz
+Keras/OpenMic_1of4/openmic_012.npz
+Keras/OpenMic_1of4/openmic_013.npz
+Keras/OpenMic_1of4/openmic_014.npz
+Keras/OpenMic_1of4/openmic_015.npz
+Keras/OpenMic_1of4/openmic_016.npz
+Keras/OpenMic_1of4/openmic_017.npz
+Keras/OpenMic_1of4/openmic_018.npz
+Keras/OpenMic_1of4/openmic_019.npz
+Keras/OpenMic_1of4/openmic_020.npz
+Keras/OpenMic_1of4/openmic_021.npz
+Keras/OpenMic_1of4/openmic_022.npz
+Keras/OpenMic_1of4/openmic_023.npz
+Keras/OpenMic_1of4/openmic_024.npz
+Keras/OpenMic_1of4/openmic_025.npz
+Keras/OpenMic_1of4/openmic_026.npz
+Keras/OpenMic_1of4/openmic_027.npz
+Keras/OpenMic_1of4/openmic_028.npz
+Keras/OpenMic_1of4/openmic_029.npz
+Keras/OpenMic_1of4/openmic_030.npz
+Keras/OpenMic_1of4/openmic_031.npz
+Keras/OpenMic_1of4/openmic_032.npz
+Keras/OpenMic_1of4/openmic_033.npz
+Keras/OpenMic_1of4/openmic_034.npz
+Keras/OpenMic_1of4/openmic_035.npz
+Keras/OpenMic_1of4/openmic_036.npz
+Keras/OpenMic_1of4/openmic_037.npz
+Keras/OpenMic_1of4/openmic_038.npz
+Keras/OpenMic_2of4/openmic_039.npz
+Keras/OpenMic_2of4/openmic_040.npz
+Keras/OpenMic_2of4/openmic_041.npz
+Keras/OpenMic_2of4/openmic_042.npz
+Keras/OpenMic_2of4/openmic_043.npz
+Keras/OpenMic_2of4/openmic_044.npz
+Keras/OpenMic_2of4/openmic_045.npz
+Keras/OpenMic_2of4/openmic_046.npz
+Keras/OpenMic_2of4/openmic_047.npz
+Keras/OpenMic_2of4/openmic_048.npz
+Keras/OpenMic_2of4/openmic_049.npz
+Keras/OpenMic_2of4/openmic_050.npz
+Keras/OpenMic_2of4/openmic_051.npz
+Keras/OpenMic_2of4/openmic_052.npz
+Keras/OpenMic_2of4/openmic_053.npz
+Keras/OpenMic_2of4/openmic_054.npz
+Keras/OpenMic_2of4/openmic_055.npz
+Keras/OpenMic_2of4/openmic_056.npz
+Keras/OpenMic_2of4/openmic_057.npz
+Keras/OpenMic_2of4/openmic_058.npz
+Keras/OpenMic_2of4/openmic_059.npz
+Keras/OpenMic_2of4/openmic_060.npz
+Keras/OpenMic_2of4/openmic_061.npz
+Keras/OpenMic_2of4/openmic_062.npz
+Keras/OpenMic_2of4/openmic_063.npz
+Keras/OpenMic_2of4/openmic_064.npz
+Keras/OpenMic_2of4/openmic_065.npz
+Keras/OpenMic_2of4/openmic_066.npz
+Keras/OpenMic_2of4/openmic_067.npz
+Keras/OpenMic_2of4/openmic_068.npz
+Keras/OpenMic_2of4/openmic_069.npz
+Keras/OpenMic_2of4/openmic_070.npz
+Keras/OpenMic_2of4/openmic_071.npz
+Keras/OpenMic_2of4/openmic_072.npz
+Keras/OpenMic_2of4/openmic_073.npz
+Keras/OpenMic_2of4/openmic_074.npz
+Keras/OpenMic_2of4/openmic_075.npz
+Keras/OpenMic_2of4/openmic_076.npz
+Keras/OpenMic_2of4/openmic_077.npz
+Keras/OpenMic_3of4/openmic_078.npz
+Keras/OpenMic_3of4/openmic_079.npz
+Keras/OpenMic_3of4/openmic_080.npz
+Keras/OpenMic_3of4/openmic_081.npz
+Keras/OpenMic_3of4/openmic_082.npz
+Keras/OpenMic_3of4/openmic_083.npz
+Keras/OpenMic_3of4/openmic_084.npz
+Keras/OpenMic_3of4/openmic_085.npz
+Keras/OpenMic_3of4/openmic_086.npz
+Keras/OpenMic_3of4/openmic_087.npz
+Keras/OpenMic_3of4/openmic_088.npz
+Keras/OpenMic_3of4/openmic_089.npz
+Keras/OpenMic_3of4/openmic_090.npz
+Keras/OpenMic_3of4/openmic_091.npz
+Keras/OpenMic_3of4/openmic_092.npz
+Keras/OpenMic_3of4/openmic_093.npz
+Keras/OpenMic_3of4/openmic_094.npz
+Keras/OpenMic_3of4/openmic_095.npz
+Keras/OpenMic_3of4/openmic_096.npz
+Keras/OpenMic_3of4/openmic_097.npz
+Keras/OpenMic_3of4/openmic_098.npz
+Keras/OpenMic_3of4/openmic_099.npz
+Keras/OpenMic_3of4/openmic_100.npz
+Keras/OpenMic_3of4/openmic_101.npz
+Keras/OpenMic_3of4/openmic_102.npz
+Keras/OpenMic_3of4/openmic_103.npz
+Keras/OpenMic_3of4/openmic_104.npz
+Keras/OpenMic_3of4/openmic_105.npz
+Keras/OpenMic_3of4/openmic_106.npz
+Keras/OpenMic_3of4/openmic_107.npz
+Keras/OpenMic_3of4/openmic_108.npz
+Keras/OpenMic_3of4/openmic_109.npz
+Keras/OpenMic_3of4/openmic_110.npz
+Keras/OpenMic_3of4/openmic_111.npz
+Keras/OpenMic_3of4/openmic_112.npz
+Keras/OpenMic_3of4/openmic_113.npz
+Keras/OpenMic_3of4/openmic_114.npz
+Keras/OpenMic_3of4/openmic_115.npz
+Keras/OpenMic_3of4/openmic_116.npz
+Keras/OpenMic_4of4/openmic_117.npz
+Keras/OpenMic_4of4/openmic_118.npz
+Keras/OpenMic_4of4/openmic_119.npz
+Keras/OpenMic_4of4/openmic_120.npz
+Keras/OpenMic_4of4/openmic_121.npz
+Keras/OpenMic_4of4/openmic_122.npz
+Keras/OpenMic_4of4/openmic_123.npz
+Keras/OpenMic_4of4/openmic_124.npz
+Keras/OpenMic_4of4/openmic_125.npz
+Keras/OpenMic_4of4/openmic_126.npz
+Keras/OpenMic_4of4/openmic_127.npz
+Keras/OpenMic_4of4/openmic_128.npz
+Keras/OpenMic_4of4/openmic_129.npz
+Keras/OpenMic_4of4/openmic_130.npz
+Keras/OpenMic_4of4/openmic_131.npz
+Keras/OpenMic_4of4/openmic_132.npz
+Keras/OpenMic_4of4/openmic_133.npz
+Keras/OpenMic_4of4/openmic_134.npz
+Keras/OpenMic_4of4/openmic_135.npz
+Keras/OpenMic_4of4/openmic_136.npz
+Keras/OpenMic_4of4/openmic_137.npz
+Keras/OpenMic_4of4/openmic_138.npz
+Keras/OpenMic_4of4/openmic_139.npz
+Keras/OpenMic_4of4/openmic_140.npz
+Keras/OpenMic_4of4/openmic_141.npz
+Keras/OpenMic_4of4/openmic_142.npz
+Keras/OpenMic_4of4/openmic_143.npz
+Keras/OpenMic_4of4/openmic_144.npz
+Keras/OpenMic_4of4/openmic_145.npz
+Keras/OpenMic_4of4/openmic_146.npz
+Keras/OpenMic_4of4/openmic_147.npz
+Keras/OpenMic_4of4/openmic_148.npz
+Keras/OpenMic_4of4/openmic_150.npz
+Keras/OpenMic_4of4/openmic_151.npz
+Keras/OpenMic_4of4/openmic_152.npz
+Keras/OpenMic_4of4/openmic_153.npz
+Keras/OpenMic_4of4/openmic_154.npz
+Keras/OpenMic_4of4/openmic_155.npz
